k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: work-app-ingress
  namespace: lab3
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - app-lab3.hakurei.dev
    secretName: app-lab3-tls
  rules:
  - host: app-lab3.hakurei.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: work-app
            port:
              number: 80
